Bug 141805 - Option "Gutter on right side of page" does not work
Summary: Option "Gutter on right side of page" does not work
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.2.0.0.alpha0+
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:7.2.0
Keywords:
Depends on:
Blocks: Gutter-Margins
  Show dependency treegraph
 
Reported: 2021-04-21 14:52 UTC by Regina Henschel
Modified: 2021-06-08 06:52 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2021-04-21 14:52:28 UTC
Make a document with page style settings:
Margin Left 15mm
Margin Right 10mm
Gutter 20mm
Page layout "Only Left"
Check option "Gutter on right side of pages".

Save and reload.
Error: The option is unchecked and the gutter is applied left.

From my tests it seems, that the option is automatically set from writing direction and not saved to file. If that is the intended behavior, then the option should not exist at all in the dialog. In that case, the gutter should always be applied to the binding edge of the page. The binding edge is determined by page layout and writing direction.

Please describe the intended behavior. Consider page layout and writing direction.
Comment 1 Miklos Vajna 2021-04-21 15:07:08 UTC
DOCX has an explicit bool property to decide if a section is rtl or not. I wanted to add a similar new bool attribute into ODT for page styles, but when we were exchanging private mails, you suggested that it is not exported to ODT, and instead we guess the value of this property on ODT import.

I took your advice and implemented the ODT filter the above way.

The result of this is that if you check the "Gutter on right side of pages" option, and save it to docx, then it has a result, but not with ODT.

It looks like this is working as intended. What do you think?
Comment 2 Regina Henschel 2021-04-21 17:03:56 UTC
It is fine for me, to uses automtic depending on writing direction and binding edge in ODT. Then the dialog needs a setting "automic", which is the only available option for odt.

Problematic is a page layout with alternating "left page" and "right page". Make these setting (as in attached file)
Right page: left margin 15mm (to be inner margin),
            right margin 30mm (to be outer margin),
            gutter 20mm,
            option unchecked (gutter to be left)
Left page: left margin 30mm (to be outer margin),
           right margin 15mm (to be inner margin)
Comment 3 Regina Henschel 2021-04-21 17:40:17 UTC
(Sorry, accidentally hit enter)

It is fine for me, to use "automatic" depending on writing direction and binding edge in ODT. Then the dialog would need a setting "automatic", which is the only available option for odt. But I think, for Word manually setting gutter position is not needed too, see below.

Problematic is a page layout with alternating "left page" and "right page". Make these setting
Style Right page: left margin 15mm (to be inner margin),
                  right margin 30mm (to be outer margin),
                  gutter 20mm,
                  option unchecked (gutter to be left)
Style Left page: left margin 30mm (to be outer margin),
                 right margin 15mm (to be inner margin),
                 gutter 20mm,
                 option checked (gutter to be right)

(Attaching an example file does not help here, because the margins and the check box is changed on opening. You need to newly create it to see the problem.)

"Save a copy as" to docx. Opening the docx file in Word gets a setting "gutter right" for the even pages, but in Word it needs to be "gutter left" same as for odd pages. Currently the exported position is wrong for odd pages.

My suggestion is to remove this checkbox.
Comment 4 Miklos Vajna 2021-04-22 07:24:20 UTC
Complete removal of the checkbox would break the following workflow:

1) Open a docx file which has a section which has rtlGutter

2) Use the UI to remove the rtl gutter

3) save

4) The rtlGutter setting is gone.

So if we do what you suggest here, the next person can file a regression bug, saying that it is no longer to interact with the rtl gutter feature of page styles, and this used to work in the past.

Perhaps we can think about an existing Writer compatibility flag that indicates that this is a Word document, and hide the checkbox in case that compatibility flag is not set?
Comment 5 Commit Notification 2021-06-08 06:44:50 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/46cc1c79485f81f2e657c226de44d68cec752e6f

tdf#141805 sw: hide rtl gutter UI for ODF documents

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.